--- a/src/app/entries/entry/entry.component.css
+++ b/src/app/entries/entry/entry.component.css
@@ -22,3 +22,29 @@ img{
     padding: 1em;
     display: block;
 }
+.actions{
+    padding: 1em 0;
+}
+
+.liked{
+    color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
