--- a/src/app/entries/entry/entry.component.html
+++ b/src/app/entries/entry/entry.component.html
@@ -14,7 +14,9 @@
             <strong>{{comment.name}}</strong>
             {{comment.comment}}
         </p>
-        
     </div>
+    <app-entry-comment-form (onCommentAdded)="onCommentAdded($event)" [entryId]="entry.id"> 
+        
+    </app-entry-comment-form>
 </div>
 
